# mcp-fal

./: .gitignore  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml
.github/workflows/: test.yml
api/: __init__.py  config.py  generate.py  storage.py  utils.py
examples/: claude-desktop-config.json
mcp_fal/: __init__.py  main.py
mcp_fal/api/: models.py
scripts/: run_with_uvx.py
