[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fal-ai-mcp-server"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for interacting with fal.ai models and services"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/am0y/mcp-fal"
Repository = "https://github.com/am0y/mcp-fal"
Issues = "https://github.com/am0y/mcp-fal/issues"

[project.scripts]
fal-ai-mcp-server = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]